apps/landingpage: fix map centering on mobile

--- a/adhocracy-plus/assets/scss/components/landing_page.scss
+++ b/adhocracy-plus/assets/scss/components/landing_page.scss
@@ -392,6 +392,10 @@ $text-color: #1A1A1A;
 }
 
 @media (max-width: $breakpoint-md) {
+    .lp-organisations-map > img {
+        padding-left: 1rem
+    }
+    
     .lp-organisations-info-overlay {
         padding: 4px 8px !important;
         bottom: -30px !important;
